<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.cvtc.bbrown32.aboutme.MainActivity">

    <item
        android:id="@+id/action_about_me"
        android:icon="@drawable/ic_about_me"
        android:orderInCategory="10"
        android:title="@string/about_me_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about_artistry"
        android:icon="@drawable/ic_about_artistry"
        android:orderInCategory="20"
        android:title="@string/about_artistry_label"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about_family"
        android:icon="@drawable/ic_about_family"
        android:orderInCategory="30"
        android:title="@string/about_family_label"
        app:showAsAction="ifRoom" />
</menu>